--- a/client/package.json
+++ b/client/package.json
@@ -8,7 +8,12 @@
     "start": "next start"
   },
   "dependencies": {
+    "@apollo/react-hooks": "^3.1.3",
+    "@apollo/react-ssr": "^3.1.3",
+    "apollo-boost": "^0.4.4",
+    "graphql": "^14.5.8",
     "next": "9.1.4",
+    "next-apollo": "^3.1.10",
     "react": "16.12.0",
     "react-dom": "16.12.0"
   }
