--- a/client/.babelrc
+++ b/client/.babelrc
@@ -1,4 +1,9 @@
 {
-  "plugins": [["styled-components", { "ssr": true, "displayName": true }]],
+  "plugins": [
+    [
+      "styled-components",
+      { "ssr": true, "displayName": true, "preprocess": false }
+    ]
+  ],
   "presets": ["next/babel"]
 }
