--- a/client/package.json
+++ b/client/package.json
@@ -12,10 +12,12 @@
     "@apollo/react-ssr": "^3.1.3",
     "apollo-boost": "^0.4.4",
     "graphql": "^14.5.8",
+    "grommet": "^2.8.1",
     "install": "^0.13.0",
     "next": "9.1.4",
     "next-apollo": "^3.1.10",
     "npm": "^6.13.2",
+    "polished": "^3.4.2",
     "react": "16.12.0",
     "react-dom": "16.12.0",
     "styled-components": "^5.0.0-rc.2"
